Parameterize rmd file for state and data

--- a/Analysis.html
+++ b/Analysis.html
@@ -196,7 +196,7 @@ pre code {
 <div id="setup" class="section level2">
 <h2>Setup</h2>
 <pre class="r"><code># set the state to work with
-state_to_analyse &lt;- &quot;North Carolina&quot;
+state_to_analyse &lt;- params$state
 
 # sanitizing the state names for output files
 state_no_spaces &lt;- gsub(state_to_analyse,
@@ -204,7 +204,7 @@ state_no_spaces &lt;- gsub(state_to_analyse,
                         replacement = &quot;_&quot;)
 
 # set the name of the global data file to use
-global_file_to_process &lt;- &quot;data/raw_data/applemobilitytrends-2021-10-23.csv&quot;
+global_file_to_process &lt;- params$data
 
 #extract core name for output file naming use
 core_name &lt;- tools::file_path_sans_ext(basename(global_file_to_process))</code></pre>
@@ -375,7 +375,7 @@ ggsave(plot = timeseries_plot_transit,
 ##  collate  English_India.1252          
 ##  ctype    English_India.1252          
 ##  tz       America/Los_Angeles         
-##  date     2021-10-26                  
+##  date     2021-11-04                  
 ## 
 ## - Packages -------------------------------------------------------------------
 ##  package     * version date       lib source        
